--- a/src/components/CharacterItemCard/CharacterItemCard.module.css
+++ b/src/components/CharacterItemCard/CharacterItemCard.module.css
@@ -1,9 +1,8 @@
 .CharacterItemImage {
-  border-radius: 8px 8px;
-  max-width: 300px;
-  width: 100%;
-  height: 260px;
+  width: 240px;
+  height: 168px;
   object-fit: cover;
+  border-radius: 4px 4px 0 0;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -11,12 +10,42 @@
   text-decoration: none;
 }
 
+.TxtWrapper {
+  padding: 12px 16px 16px 16px;
+}
+
 .CharacterName {
   font-weight: 500;
   font-size: 20px;
-  line-height: 30px;
-
+  line-height: 1.5;
+  color: #000000de;
   display: flex;
   align-items: center;
   letter-spacing: 0.15px;
+}
+
+.CharacterSpecies {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.5;
+  letter-spacing: 0.25px;
+  color: #00000099;
+}
+
+.CharacterGalleryItem {
+  width: 240px;
+  display: block;
+  background-color: #ffff;
+  transform: scale(1);
+  transition: transform 250ms linear;
+  border-radius: 4px;
+  box-shadow: 0px 2px 4px 0px #00000024;
+  box-shadow: 0px 3px 4px 0px #0000001f;
+  box-shadow: 0px 1px 5px 0px #00000033;
+}
+
+.CharacterGalleryItem:hover,
+.CharacterGalleryItem:focus {
+  transform: scale(1.02);
+  cursor: pointer;
 }
