--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import 'modern-normalize/modern-normalize.css';
 
 body {
-  margin: 0;
+  margin: 86px 0;
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
