--- a/src/pages/CharacterPage/CharacterPage.module.css
+++ b/src/pages/CharacterPage/CharacterPage.module.css
@@ -4,6 +4,8 @@
 }
 
 .Container {
+  max-width: 1020px;
+  margin: 0 auto;
   margin-top: 32px;
 }
 
@@ -42,7 +44,6 @@
 
 .BackBtn {
   margin-top: 32px;
-  margin-left: 16px;
 }
 
 .TxtOptions {
